--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Norah Jones">
-<meta name="dcterms.date" content="2024-01-10">
 
 <title>quarto_docs</title>
 <style>
@@ -194,7 +193,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 10, 2024</p>
+      <p class="date">Jan 10, 2024, 10:46:34</p>
     </div>
   </div>
   
