--- a/public_html/index.html
+++ b/public_html/index.html
@@ -193,7 +193,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">Jan 10, 2024, 10:46:34</p>
+      <p class="date">Jan 10, 2024, 11:06:54</p>
     </div>
   </div>
   
@@ -213,6 +213,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <pre><code>[1] 2</code></pre>
 </div>
 </div>
+<p>changed now</p>
 
 
 </section>
